crates/test-ui/ui/invalid_option_encode_impl.stderr
error[E0080]: evaluation panicked: invalid OptionEncode + Encode implementation
 --> $WORKSPACE/crates/objc2/src/encode.rs
  |
  |             panic!("invalid OptionEncode + Encode implementation");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<std::option::Option<MyType> as objc2::Encode>::ENCODING` failed here

note: erroneous constant encountered
 --> ui/invalid_option_encode_impl.rs
  |
  |     assert_eq!(<Option<MyType>>::ENCODING, MyType::ENCODING);
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> ui/invalid_option_encode_impl.rs
  |
  |     assert_eq!(<Option<MyType>>::ENCODING, MyType::ENCODING);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this note originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)
